# Autonomous-Mobile-Robot-Project

./: .gitmodules  README.md
arduino/: moter_test.ino
arduino/encoder/: emcoder_rosserial_test.ino  simple_encoder_test.ino
arduino/imu/: BMX055_rosserial_test.ino
arduino/integration/: imu_moter_encoder_integration.ino  integration.ino
arduino/moter/: moter_rosserial_test.ino  simple_moter_test.ino
scripts/: key_teleop.py
src/2D_Navigation_Stack/: CMakeLists.txt  package.xml
src/2D_Navigation_Stack/frams/actual_machine/: frames.gv
src/2D_Navigation_Stack/frams/simulation/: frames.gv
src/2D_Navigation_Stack/launch/: amcl.launch  ck9_amcl.launch  ck9_gazebo.launch  ck9_navigate.launch  ck9_states.launch  minimal.launch  move_base.launch  move_room.launch  room_gmapping.launch  rplidar_map.launch  wheel_robot.launch  wheel_robot_gmapping.launch  wheel_robot_nav.launch
src/2D_Navigation_Stack/maps/: MK_room.pgm  MK_room.yaml  gmapping.pgm  gmapping2.pgm  gmapping2.yaml  hectorslam.yaml  living.pgm  living.yaml  mymap.pgm  output.pgm  output.yaml
src/2D_Navigation_Stack/models/: model.config  model.sdf
src/2D_Navigation_Stack/models/MK_room/: model.config  model.sdf
src/2D_Navigation_Stack/models/space/: model.config  model.sdf
src/2D_Navigation_Stack/params/2WD_params/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
src/2D_Navigation_Stack/params/4WD_params/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
src/2D_Navigation_Stack/params/ck9_params/: move_base_params.yaml
src/2D_Navigation_Stack/params/ck9_params_adjustment/: base_local_planner_default_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
src/2D_Navigation_Stack/params/ck9_params_base_link/: costmap_common_params.yaml  ekf_config.yaml  global_costmap_params.yaml  local_costmap_params.yaml
src/2D_Navigation_Stack/rviz/: ck9_navigation.rviz  navigation.rviz
src/2D_Navigation_Stack/scripts/: key_teleop.py  odometry.py  raw_odom.py
src/2D_Navigation_Stack/src/: mobile_odom.cpp
src/2D_Navigation_Stack/urdf/: 2WD_laser.urdf.xacro  4WD_laser.urdf.xacro  ck9_gazebo.xacro  mybot.gazebo  mybot.xacro  two_wheel.urdf.xacro  two_wheel_robot.xacro  wheel.urdf.xacro  wheel_robot_base.urdf.xacro
src/2D_Navigation_Stack/world/: room.world  space.world
src/fail_safe/: CMakeLists.txt  package.xml
src/fail_safe/src/: fail_safe_along_wall.cpp  fail_safe_following_people.cpp  fail_safe_scan.cpp
src/waypoints_navigation/: CMakeLists.txt  package.xml
src/waypoints_navigation/launch/: waypoints_publish.launch
src/waypoints_navigation/src/: save_odometry.cpp  waypoints_publish.cpp
src/waypoints_navigation/yaml/: waypoints.yaml
