cmake_minimum_required(VERSION 3.0.2)
project(2D_Navigation_Stack)

find_package(catkin REQUIRED COMPONENTS
  roscpp
  std_msgs
  urdf
  xacro
)

catkin_package(
#  INCLUDE_DIRS include
#  LIBRARIES 2D_Navigation_Stack
#  CATKIN_DEPENDS roscpp
#  DEPENDS system_lib
)

include_directories(
# include
  ${catkin_INCLUDE_DIRS}
)